styles/style.css
body{
background-color: #2A8EBF;
width: auto;
}

#welcome{
  float: center;
  position: fixed;
  background-color:#2A8EBF
  width: auto;
  align-content: center;
  max-width: 60%;
  min-width: 20%;
  height: 400px;
  margin: auto;
  margin-right: 0;
}
/* MAIN MENU STUFF */
.container {
  display: inline-block;
  cursor: pointer;
  padding-left: 30px;
  padding-top: 5px;
}

.bar1,.bar2,.bar3{
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;


}

/* .change .bar1{
  -webkit-transform: rotate(-45deg) translate(-9px,6px);
  transform: rotate(-45deg) translate(-9px, 6px);
}

.change .bar2{
  opacity: 0;
}

.change .bar3{
  -webkit-transform: rotate(45deg) translate(-8px,-8px);
  transform: rotate(45deg) translate(-8px, -8px);
} */

.sidenav{
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  padding-top: 60px;
  transition: 0.5s;

}
.sidenav a{
  padding: 8px 8px 8px 32px;
  font-family: 'Darker Grotesque', sans-serif;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;

}

.sidenav a:hover{
  color: #f1f1f1;

}

.sidenav .closebtn{
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#main {
  transition: margin-left . 5s;
  padding: 20px;
}

@media screen and (max-heigh: 450px){
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}
/* Menu STUFF */

.logo{
  max-width: 60%;
  height: 250px;
  margin: 50px;
  display:flex;
  align-self: stretch;
  border-radius: 200px;
  margin-top: 80px;
  display: block;
}

.start{
  background-color: #5079C7
}

a{
  text-decoration: none;
}
a:hover{
  color: white;
  font-weight: bold;

